# Auto-Development-Studio

./: .env.example  .gitignore  README.md  _fix_root.py  _wire_scope_upload.py  add_head_handler.py  branch.bat  dump_templates.py  fix1.py  fix2.py  fix3.py  fix4.py  fix5.py  fix6.py  fix_all_templates.py  fix_base.py  fix_brand.py  fix_brand_template.py  fix_icon.py  fix_line.py  fix_main.py  fix_scope.py  fix_wizard_v2.py  inspect_gen.py  litestream.yml  make_ai.py  make_reqs.py  package.json  patch_ai.py  patch_preview.py  patch_preview2.py  pyproject.toml  redesign_all.py  render.yaml  requirements.txt  strip_bom.py  tailwind.config.js  update_wizard.py  write_wizard.py
_backup_pre_wire/app/templates/wizard/: preview.html  scope.html
app/: config.py  database.py  main.py
app/models/: user.py
app/routers/: auth.py  brand_studio.py  wizard.py  wizard.py.bak
app/templates/: base.html  brand_studio.html  dashboard.html  index.html  login.html
app/templates/wizard/: ai_sidebar.html  answers.html  preview.html  questions.html  requirements.html  scope.html  success.html
mockup/: index.html
scripts/: build.sh  generate_project.py  start.sh
