[project]
name = "auto-development-studio"
version = "0.1.0"
description = "An AI-powered web studio for auto-generating full-stack web applications via a project wizard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "jinja2>=3.1.4",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.6.0",
    "authlib>=1.4.0",
    "itsdangerous>=2.2.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
]
[dependency-groups]
dev = []
[tool.setuptools.packages.find]
include = ["app*"]
[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"